tests/paczka1/fuzzy1/63056766.err
Error in line 4: HBSzevOIx A383 35,3
Error in line 5: HBSzevOIx A134 26,7
Error in line 13: HBSzevOIx A383 69,6
Error in line 14: HBSzevOIx A371 83,1
Error in line 25: LA3 A371 43,5
Error in line 36: LA3 A669 99,9
Error in line 38: 5il A134 57,9
